src/test/ui/extern-flag/noprelude.stderr
error[E0433]: failed to resolve: use of undeclared type or module `somedep`
  --> $DIR/noprelude.rs:6:5
   |
LL |     somedep::somefun();
   |     ^^^^^^^ use of undeclared type or module `somedep`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
